--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Monitoring-Sneck
 
+0.1.0   2022-08-03/17:15
+        -Add -b to base64+gzip output from -c
+
 0.0.1   2022-04-24/16:30
         -Initial release.
+
+
 
