--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Monitoring-Sneck
 
+0.3.0   2024-01-10/20:15
+		 - convert to Pod::Usage
+		 - convert to IO::Compress::Gzip
+		 - now creates /var/cache/sneck.cache.snmp which contains the compressed output
+
 0.2.0   2023-06-15/17:15
 		- Documentation cleanup
 		- convert to use src_bin
