--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Monitoring-Sneck
 
+1.0.0   2025-04-07/
+		- now captures stderr as well
+
 0.5.0   2024-01-13/20:00
 		 - update some docs and rework variables from %%%var%%% to /\%+var\%+/
 
