--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Monitoring-Sneck
 
-1.0.0   2025-04-07/
+1.0.0   2025-04-07/09:15
 		- now captures stderr as well
+		- add debug checks that don't affect the end results and just provide additional info
 
 0.5.0   2024-01-13/20:00
 		 - update some docs and rework variables from %%%var%%% to /\%+var\%+/
