--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Monitoring-Sneck
 
+1.0.1   2025-04-07/10:30
+		- fix exit code stuff for debug
+
 1.0.0   2025-04-07/10:00
 		- now captures stderr as well
 		- add debug checks that don't affect the end results and just provide additional info
