--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Monitoring-Sneck
 
+1.1.0   2025-07-25/01:45
+		- add run_time variables for total, checks, and debug
+		- fix an issue that could result in it complaining about undef
+
 1.0.2   2025-04-11/14:15
 		- call waitpid to actually get the exit code
 
