--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Monitoring-Sneck
 
+1.2.1   2025-10-17/10:00
+		- make sure .data.time is actually a int
+
 1.2.0   2025-10-14/17:45
 		- add -d to src_bin/sneck to print debugging info when run is called
 
